--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
