--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "ws": "^8.13.0"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "directories": {
+    "example": "example"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AItist/P1_MainServer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AItist/P1_MainServer/issues"
+  },
+  "homepage": "https://github.com/AItist/P1_MainServer#readme"
 }
